--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-j-8.2.0.jar=E:\\CS Bridge\\lib\\mysql-connector-j-8.1.0.jar
-user.properties.file=C:\\Users\\Compu Matket\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\elmnshawy\\AppData\\Roaming\\NetBeans\\19\\build.properties
