--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -106,7 +106,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AirlLineManagement
-main.class=Main_Application.Main
+main.class=airllinemanagement.ManageFlight
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
